<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textloginx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/giri_yap"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/imgv3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textloginx" />
    <EditText
        android:id="@+id/emaillgn"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edt_bg"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:hint="@string/email_giriniz"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgv3" />
    <EditText
        android:id="@+id/passwordlgn"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edt_bg"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:hint="@string/şifre"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emaillgn" />

    <Button
        android:id="@+id/loginbttn"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/orange"
        android:text="@string/giri_yap2"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordlgn" />

    <TextView
        android:id="@+id/signuptx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/hesab_n_z_yoksa_hesap_a_n_z"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbttn" />


</androidx.constraintlayout.widget.ConstraintLayout>